samples/_failures_safe/1761603719_af75a7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_50fbb8e7.c: In function ‘compute_bounds’:
./samples/SAFE/__tmp_50fbb8e7.c:113:53: error: expected ‘)’ at end of input
  113 |         if (mesh->vertices[i].z > mesh->bounds.max.z
      |            ~                                        ^
      |                                                     )
./samples/SAFE/__tmp_50fbb8e7.c:113:9: error: expected declaration or statement at end of input
  113 |         if (mesh->vertices[i].z > mesh->bounds.max.z
      |         ^~
./samples/SAFE/__tmp_50fbb8e7.c:113:9: error: expected declaration or statement at end of input
